add creation api

--- a/src/ClientModels/ClientModels.csproj
+++ b/src/ClientModels/ClientModels.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <RootNamespace>Birds.ClientModels</RootNamespace>
+        <AssemblyName>Birds.ClientModels</AssemblyName>
     </PropertyGroup>
 
 </Project>
