--- a/src/api/API.csproj
+++ b/src/api/API.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <RootNamespace>Birds.API</RootNamespace>
+        <AssemblyName>Birds.API</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,10 +26,6 @@
     <ItemGroup>
       <ProjectReference Include="..\ClientModels\ClientModels.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Converters" />
     </ItemGroup>
     
 </Project>
