--- a/src/Models/Models.csproj
+++ b/src/Models/Models.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
+      <PackageReference Include="MongoDB.Driver.GridFS" Version="2.5.0" />
     </ItemGroup>
 
 </Project>
