--- a/src/api/API.csproj
+++ b/src/api/API.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <RootNamespace>Birds.API</RootNamespace>
         <AssemblyName>Birds.API</AssemblyName>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
