--- a/src/Client/Client.csproj
+++ b/src/Client/Client.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    </ItemGroup>
+
 </Project>
