--- a/src/FilesTool/FilesTool.csproj
+++ b/src/FilesTool/FilesTool.csproj
@@ -11,4 +11,12 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ClientModels\ClientModels.csproj" />
+    </ItemGroup>
+
 </Project>
