using birds Client

--- a/src/FilesTool/FilesTool.csproj
+++ b/src/FilesTool/FilesTool.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ClientModels\ClientModels.csproj" />
+      <ProjectReference Include="..\Client\Client.csproj" />
     </ItemGroup>
 
 </Project>
