--- a/birds-frontend/package.json
+++ b/birds-frontend/package.json
@@ -7,6 +7,27 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.17.0",
+    "jest-junit": "^3.6.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!build/**"
+    ],
+    "coverageReporters": [
+      "lcov",
+      "text"
+    ]
+  },
+  "jest-junit": {
+    "output": "test-results/test-report.junit.xml"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
